# veilrouter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_core.py  benchmark_scorer_models.py  scoring_eval_dataset.json
examples/: privacy_diagnostics.py  real_local_diagnostics.py
tests/: test_config_errors.py  test_pii.py  test_providers.py  test_router.py  test_scorer_benchmark.py  test_scoring.py  test_telemetry.py
veilroute/: __init__.py  config.py  errors.py  router.py
veilroute/pii/: __init__.py  detector.py  redactor.py  restorer.py
veilroute/providers/: __init__.py  base.py  foundry_local.py  openai_compatible.py
veilroute/scoring/: __init__.py  llm_scorer.py  parsing.py
veilroute/telemetry/: __init__.py  pricing.py
veilrouter/: __init__.py  config.py  errors.py  router.py
veilrouter/pii/: __init__.py  detector.py  placeholders.py  redactor.py  restorer.py
veilrouter/providers/: __init__.py  base.py  foundry_local.py  openai_compatible.py
veilrouter/scoring/: __init__.py  llm_scorer.py  parsing.py  scorer.py
veilrouter/telemetry/: __init__.py  recorder.py
